Replace "Set Location" control with smarter viewports that remember where you were and can center when points are loaded.

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -151,6 +151,16 @@ h2 {
   }
 }
 
+input[type="checkbox"] {
+  line-height: 14px;
+  vertical-align: middle;
+
+  + label {
+    line-height: 14px;
+    vertical-align: middle;
+  }
+}
+
 .text-options {
   display: table;
   width: 250px;
